[workspace]
members = ["crates/*"]

[workspace.package]
name = "yangfmt"
version = "0.1.2"
authors = ["Tomas Sandven <cargo.hubro@fastmail.com>"]
edition = "2021"
description = "YANG code formatter"
homepage = "https://github.com/Hubro/yangfmt"
license-file = "LICENSE"
keywords = ["yang", "code-formatter"]
categories = ["command-line-utilities", "development-tools"]

[profile.release]
strip = true
