[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.2"
authors = ["Tomas Sandven <cargo.hubro@fastmail.com>"]
edition = "2021"
license-file = "LICENSE"

[workspace.dependencies]
lazy_static = "1.4.0"
phf = { version = "0.11.1", features = ["macros"] }
pretty_assertions = "1.2.1"
regex = "1.8.1"
textwrap = "0.16"

yangfmt_lexing = { path = "crates/yangfmt_lexing" }
yangfmt_parsing = { path = "crates/yangfmt_parsing" }
yangfmt_formatting = { path = "crates/yangfmt_formatting" }

[profile.release]
strip = true
