[package]
name = "yangfmt"
description = "YANG code formatter"
homepage = "https://github.com/Hubro/yangfmt"
keywords = ["yang", "code-formatter"]
categories = ["command-line-utilities", "development-tools"]

version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }

yangfmt_lexing.workspace = true
yangfmt_parsing.workspace = true
yangfmt_formatting.workspace = true
