[package]
name = "yangfmt_formatting"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license-file.workspace = true

[lib]
path = "src/formatting.rs"
doctest = false

[dependencies]
lazy_static.workspace = true
phf.workspace = true
pretty_assertions.workspace = true
textwrap.workspace = true

yangfmt_parsing.workspace = true
