[package]
name = "yangfmt_lexing"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pretty_assertions = "1.2.1"
regex = "1.8.1"
textwrap = "0.16"
