[package]
name = "yangfmt_parsing"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license-file.workspace = true

[lib]
path = "src/parsing.rs"
doctest = false

[dependencies]
lazy_static.workspace = true
pretty_assertions.workspace = true
regex.workspace = true
textwrap.workspace = true

yangfmt_lexing.workspace = true
